--- a/classChat/app/views/rooms/_form.html.erb
+++ b/classChat/app/views/rooms/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :class %>
-    <%= f.text_field :class %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
