--- a/classChat/app/views/messages/_form.html.erb
+++ b/classChat/app/views/messages/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :content %>
     <%= f.text_field :content %>
+    <%= f.hidden_field :room_id, value: room.id %>
   </div>
 
   <div class="actions">
