--- a/classChat/app/views/messages/_message.html.erb
+++ b/classChat/app/views/messages/_message.html.erb
@@ -1,1 +1,5 @@
-<p><strong><%= message.student.name %>:</strong> <%= message.content %></p>
+<% if @current_teacher  %>
+  <p><strong><%= message.student.name %>:</strong> <%= message.content %></p>
+<% else %>
+  <p><strong>Student:</strong> <%= message.content %></p>
+<% end %>
